2012-01-16  Patrice Dumas  <pertusus@free.fr>

	* util/detexinfo, util/Makefile.am: new script to strip @-commands.

	* doc/texinfo.txi (Configuration Variables): document TEXTCONTENT
	and RAW_TEXT.

2012-01-15  Patrice Dumas  <pertusus@free.fr>

	* doc/texinfo.txi (Configuration Variables for @@-Commands):
	remove @-commands that have no effect and add new @-commands available
	as customization options.

	* tp/texi2any.pl, tp/Texinfo/Convert/TextContent.pm, tp/Makefile.am, TODO: 
	New converter that strips commands from output.

2012-01-14  Patrice Dumas  <pertusus@free.fr>

	Move tests from texi2html that are still relevant to tp.

	* configure.ac (AC_CONFIG_FILES): Add tp/tests Makefiles.
	* tp/Makefile.am (SUBDIRS),
	* tp/tests: New directory for tests.

2012-01-14  Sergey Poznyakoff  <gray@gnu.org.ua>

	Use literal matching when searching for xrefs or menu items.
	
	* info/nodes.c (adjust_nodestart): Reset body_start.
	* info/session.c (info_toggle_regexp): Minor change.
	(info_menu_or_ref_item): Set cursor at the start of
	the body if the search fails.
	(info_search_in_node_internal): Take additional argument
	indicating whether to use regexp matching. All uses changed.
	(info_search_in_node): Likewise.
	(info_target_search_node): Use additional argument to mask
	use_regex flag. All uses changed.
	(info_menu_or_ref_item): Mask out use_regex.
	* info/session.h (info_search_in_node)
	(info_target_search_node): Change prototypes.
	
	* info/indices.c (info_next_index_match): Update.
	* info/footnotes.c (make_footnotes_node): Update.

2012-01-12  Karl Berry  <karl@gnu.org>

	* util/texi2dvi (run_makeinfo): put the whole version check
	subshell into the if condition, else the oh-so-helpful set -e
	defeats the check for a broken texinfo.tex.
	Report from Jim Meyering, 09 Nov 2011 20:43:08,
	help from Eric Blake, 9 Nov 2011 21:59:33.

	* util/texi2dvi (move_to_dest): support --output in non-clean modes.

	* util/tests/automtest.sh: manual test from automake, via