@@ -172,8 +172,9 @@ my @variable_settables = (
   'USE_UP_NODE_FOR_ELEMENT_UP',
   'BEFORE_OVERVIEW', 'AFTER_OVERVIEW',
   'BEFORE_TOC_LINES', 'AFTER_TOC_LINES', 
+  'SORT_ELEMENT_COUNT', 'SORT_ELEMENT_COUNT_COUNT_WORDS',
 # FIXME document
-  'TEXTCONTENT_COMMENT',
+  'TEXTCONTENT_COMMENT', 
 # FIXME Not strings. To be documented.
   'LINKS_BUTTONS', 'TOP_BUTTONS', 'SECTION_BUTTONS', 'BUTTONS_TEXT',
   'BUTTONS_ACCESSKEY', 'BUTTONS_REL', 'BUTTONS_GOTO',
